# efcf-eEVM

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  build-contracts.sh  quick-build.sh  test-one-input.sh
contracts/: Addition.cpp  AdditionTest.cpp  Bank.bb_list  Bank.combined.json  Bank.cpp  Bank.sol  SafeSending.bb_list  SafeSending.cpp  asserter.bb_list  asserter.cpp  asserter.sol  crowdsale.bb_list  crowdsale.combined.json  crowdsale.cpp  crowdsale.sol  harvey_baz.bb_list  harvey_baz.combined.json  harvey_baz.cpp  nop.bb_list  nop.cpp
fuzz/: cov-allowlist.txt  cov-blocklist.txt  crash-chain.py  evm-bb-coverage.sh  interactive-aflfuzz.sh  launch-aflfuzz.sh  launch-libfuzzer.sh  make-dict.py  state.load.bank.json  state.load.crowdsale.json  state.load.example.addition.json  state.load.example.json  state2dict.py
fuzz/abi/: Bank.abi  asserter.abi  crowdsale.abi  harvey_baz.abi
fuzz/common/: fuzz_config.hpp  fuzz_init.cpp  fuzz_init.hpp
fuzz/crowdsale_attack/: README.md  analyze-txid.py  attack  make-attack.py  monitor_outputs.sh
fuzz/dict/: Bank.dict  SafeSending.dict  crowdsale.dict  harvey_baz.dict
fuzz/differential/: main.cpp
fuzz/example_inputs/: addition-test.yaml  bank_attack.yaml  crowdsale_attack.yml  no-reentrancy-simpledao.yaml  reentrancy-simpledao.yaml  reentrancy-spankchain-ledgerchannel.yaml
fuzz/generic_seeds/: fallback.yaml  receive.yaml
fuzz/multitx/: main.cpp
fuzz/properties/: .gitignore
include/eEVM/: SpecializedProcessorFactory.h  account.h  bigint.h  debug.h  exception.h  globalstate.h  opcode.h  processor-impl.h  processor.h  stack.h  storage.h  trace.h  transaction.h  util.h
include/eEVM/evm2cpp/: contracts.h
include/eEVM/evm2cpp/contracts/: Addition.h  AdditionTest.h  Bank.h  SafeSending.h  asserter.h  crowdsale.h  harvey_baz.h  harvey_testme_Baz.h  nop.h
include/eEVM/fuzz/: EthFuzzDataProvider.hpp  addresses.hpp  fuzzcase.hpp  tracecomp.hpp  tracing.hpp
include/eEVM/simple/: msgpacker.h  simpleaccount.h  simpleglobalstate.h  simplestorage.h
samples/crowdsale/: main.cpp
src/: detector.cpp  disassembler.cpp  processor.cpp  stack.cpp  util.cpp
src/simple/: msgpacker.cpp  simpleaccount.cpp  simpleglobalstate.cpp  simplestorage.cpp
tests/: harness.cpp  main.cpp
